--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>Celik Wallpaper</title>  
+    <title>K&B Wallpaper</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
