--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en"><!-- Basic -->
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">   
+	
    
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
  
      <!-- Site Metas -->
-    <title>K&B Wallpaper</title>  
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>K&B-Wallpaper Installation Toronto(Gta)</title>  
+    <meta name="keywords" content="Wallpaper Installation, 3D stone pattern, flat pattern, flower pattern, modern erasable wallpaper, Wallpaper removing">
+    <meta name="description" content="We professionally apply your favorite wallpapers to your home, office, workplace, baby and kids room, teen room.">
+    <meta name="author" content="Bugra Celik">
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="#" type="image/x-icon" />
-    <link rel="apple-touch-icon" href="#" />
+  
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -98,12 +100,12 @@
 							
 							<div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
 						      <div class="full">
-						      	  <img class="img-responsive" src="images/d4.png" alt="#" />
+						      	  <img class="img-responsive" src="images/d4.png" alt="wallpaper example1" />
 						      </div>
 							</div>
 
                               <div class="col-lg-6 col-md-6 col-sm-12">
-								<h2><img style="width: 60px;" src="images/gb.png" alt="#" /> Our Wishes</h2>
+								<h2><img style="width: 60px;" src="images/gb.png" alt="wallpaint logo" /> Our Wishes</h2>
 								<p>Clean Workmanship<br><br>
 									With Coverings for Protecting Your Furniture and Parquet,
 									We Protect Your Skirting Boards And Electric Sockets With Masking Tapes.
@@ -140,7 +142,7 @@
 
 							<div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
 						      <div class="full">
-						      	  <img class="img-responsive" src="images/w2.png" alt="#" />
+						      	  <img class="img-responsive" src="images/w2.png" alt="stone wallpaper" />
 						      </div>
 							</div>
 
@@ -225,37 +227,37 @@
 				<ul class="popup-gallery clearfix">
 					<li>
 						<a href="images/d1.png">
-							<img class="img-fluid" src="images/d1.png" alt="single image">
+							<img class="img-fluid" src="images/d1.png" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
 					<li>
 						<a href="images/d2.png">
-							<img class="img-fluid" src="images/d2.png" alt="single image">
+							<img class="img-fluid" src="images/d2.png" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
 					<li>
 						<a href="images/d3.png">
-							<img class="img-fluid" src="images/d3.png" alt="single image">
+							<img class="img-fluid" src="images/d3.png" alt="wallpaper ">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
 					<li>
 						<a href="images/d4.png">
-							<img class="img-fluid" src="images/d4.png" alt="single image">
+							<img class="img-fluid" src="images/d4.png" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
 					<li>
 						<a href="images/3d.png">
-							<img class="img-fluid" src="images/3d.png" alt="single image">
+							<img class="img-fluid" src="images/3d.png" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
 					<li>
 						<a href="images/d5.jpg">
-							<img class="img-fluid" src="images/d5.jpg" alt="single image">
+							<img class="img-fluid" src="images/d5.jpg" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
@@ -285,7 +287,7 @@
                       <div class="carousel-inner">
                         <div class="carousel-item text-center active">
                             <div class="testimonial_img">
-                                <img width="100" height="150" class="d-block rounded-circle" src="images/profile-1.jpg" alt="First slide">
+                                <img width="100" height="150" class="d-block rounded-circle" src="images/profile-1.jpg" alt="Bugra Celik">
                             </div>
                             <h5 class="mt-4 mb-0"><strong class="text-uppercase" style="color: #e91327;padding-bottom: 0;">Bugra C.</strong></h5>
                             <p class="m-0 pt-3">Our mission is to serve our customers urgently in the field of wallpaper and decoration and to deliver the job with customer satisfaction. Our priority is to ensure customer satisfaction and trust.  we are ready to bring a new percpectives into your room with your unique design, You decide the design and give us a call for Installation. We have had the pleasure of serving Toronto(GTA) as professional paint specialists </p>
