--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="pogoSlider" id="js-main-slider">
-					<div class="pogoSlider-slide" style="background-image:url(images/slider-01.png);"></div>
 					<div class="pogoSlider-slide" style="background-image:url(images/slider-02.jpg);"></div>
 				</div><!-- .pogoSlider -->
 			</div>
@@ -171,8 +170,6 @@
 						<img src="images/d6.jpg" alt="Wallpaper_model_9010" />
 						<figcaption>
 							<h2>Deal One</h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-							<a href="#">View more</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -181,8 +178,6 @@
 						<img src="images/4d.png" alt="Wallpaper_model_9020" />
 						<figcaption>
 							<h2>Deal Two</h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-							<a href="#">View more</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -191,8 +186,6 @@
 						<img src="images/5d.png" alt="Wallpaper_model_9030" />
 						<figcaption>
 							<h2>Deal Three</h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-							<a href="#">View more</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -201,8 +194,6 @@
 						<img src="images/6d.png" alt="Wallpaper_model_9040" />
 						<figcaption>
 							<h2>Deal Four</h2>
-							<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-							<a href="#">View more</a>
 						</figcaption>
 					</figure>
 				</div>
@@ -290,7 +281,7 @@
                                 <img width="100" height="150" class="d-block rounded-circle" src="images/profile-1.jpg" alt="Bugra Celik">
                             </div>
                             <h5 class="mt-4 mb-0"><strong class="text-uppercase" style="color: #e91327;padding-bottom: 0;">Bugra C.</strong></h5>
-                            <p class="m-0 pt-3">Our mission is to serve our customers urgently in the field of wallpaper and decoration and to deliver the job with customer satisfaction. Our priority is to ensure customer satisfaction and trust.  we are ready to bring a new percpectives into your room with your unique design, You decide the design and give us a call for Installation. We have had the pleasure of serving Toronto(GTA) as professional paint specialists </p>
+                            <p class="m-0 pt-3">Our mission is to serve our customers urgently in the field of wallpaper and decoration and to deliver the job with customer satisfaction.<br> Our priority is to ensure customer satisfaction and trust.  we are ready to bring a new percpectives into your room with your unique design, You decide the design and give us a call for Installation. We have had the pleasure of serving Toronto(GTA) as professional paint specialists </p>
                         </div>
     
                       </div>
