--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 					</li>
 					<li>
 						<a href="images/d5.jpg">
-							<img class="img-fluid" src="images/d5.jpg" alt="wallpaper">
+							<img class="img-fluid" src="images/d5.png" alt="wallpaper">
 							<span class="overlay"><i class="fa fa-picture-o" aria-hidden="true"></i></span>
 						</a>
 					</li>
